# Gameboy

./: README.md
.metadata/: .log4j2.xml  version.ini
.metadata/.plugins/org.eclipse.cdt.core/: 6502_Emulator.1762487143691.pdom  6502_Emulator.language.settings.xml  GameBoy_Reworked.1762916485049.pdom  GameBoy_Reworked.language.settings.xml  Gameboy_Rework2.1763849896779.pdom  Gameboy_Rework2.language.settings.xml
.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.core.resources/: 1.snap
.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
6502_Emulator/: .cproject  .mxproject  .project  6502_Emulator Debug.cfg  6502_Emulator Debug.launch  6502_Emulator.ioc  STM32C071RBIXN_FLASH.ld
6502_Emulator/Debug/: 6502_Emulator.elf  6502_Emulator.list  6502_Emulator.map  makefile  objects.list
GameBoy_COde/GameBoy/: .cproject  .project  GameBoy.ioc
GameBoy_Reworked/: .cproject  .project  GameBoy_Reworked Debug.launch  GameBoy_Reworked.ioc
GameBoy_Reworked/Debug/: GameBoy_Reworked.list  GameBoy_Reworked.map  makefile  objects.list  sources.mk
Gameboy_Rework2/: .cproject  .project  Gameboy_Rework2.ioc
Gameboy_Rework2/Debug/: Gameboy_Rework2.elf  Gameboy_Rework2.list  Gameboy_Rework2.map  makefile
inc/: bus.h  cpu.h
messagingApp/backend/server/: .env  CMakeLists.txt  main.cpp
messagingApp/backend/server/inc/: WebSocketManager.h  database.h
messagingApp/backend/server/src/: WebSocktManager.c  WebSocktManager.cc  client.cpp  database.c  main.cpp  server_main.cpp
src/: gpio.c  systick.c
(+195 files in other folders)
